# hildon-welcome

./: Makefile.am  autogen.sh  configure.ac
data/: 10hildon_welcome  Makefile.am
debian/: changelog  control  copyright  hildon-welcome.files  hildon-welcome.launcher  rules
src/: Makefile.am  conffile.c  conffile.h  main.c  tmp.c
